k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cheddr-api
  namespace: cheddr
spec:
  selector:
    app: cheddr-api
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
