k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cheddr-api
  namespace: cheddr
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.middlewares: default-redirect-https@kubernetescrd
spec:
  tls:
    - hosts:
        - cheddr-api.kblab.me
      secretName: cheddr-api-tls
  rules:
    - host: cheddr-api.kblab.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cheddr-api
                port:
                  number: 80
